--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                         <desc>
                             Created with Pixso.
                         </desc>
-                        <defs />
-                        <path id="Vector"
-                            d="M11.53 10.41C12.52 9.14 12.99 7.54 12.84 5.93C12.68 4.33 11.93 2.84 10.72 1.78C9.51 0.71 7.94 0.15 6.33 0.2C4.72 0.25 3.19 0.91 2.05 2.05C0.91 3.19 0.25 4.72 0.2 6.33C0.15 7.94 0.71 9.51 1.78 10.72C2.85 11.93 4.33 12.68 5.94 12.83C7.54 12.99 9.14 12.52 10.42 11.53L10.45 11.56L13.81 14.92C13.88 15 13.97 15.05 14.07 15.09C14.16 15.13 14.27 15.16 14.37 15.16C14.47 15.16 14.58 15.13 14.67 15.09C14.77 15.05 14.86 15 14.93 14.92C15 14.85 15.06 14.76 15.1 14.67C15.14 14.57 15.16 14.47 15.16 14.36C15.16 14.26 15.14 14.16 15.1 14.06C15.06 13.96 15 13.88 14.93 13.8L11.57 10.44C11.56 10.43 11.55 10.42 11.53 10.41ZM9.89 3.17C10.34 3.61 10.69 4.13 10.94 4.71C11.18 5.29 11.31 5.91 11.31 6.53C11.31 7.16 11.19 7.78 10.95 8.36C10.71 8.94 10.36 9.47 9.92 9.91C9.47 10.36 8.95 10.71 8.37 10.95C7.79 11.18 7.17 11.31 6.54 11.3C5.91 11.3 5.29 11.17 4.72 10.93C4.14 10.69 3.61 10.33 3.17 9.88C2.29 8.99 1.8 7.79 1.81 6.53C1.81 5.28 2.31 4.08 3.2 3.19C4.09 2.31 5.29 1.81 6.54 1.8C7.79 1.8 9 2.29 9.89 3.17Z"
-                            fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd" />
-                        <path id="Vector"
-                            d="M13.04 7.14Q13.09 6.54 13.03 5.92Q12.98 5.3 12.81 4.71Q12.63 4.12 12.35 3.56Q12.07 3.01 11.69 2.53Q11.32 2.04 10.85 1.63Q10.38 1.22 9.86 0.91Q9.33 0.59 8.75 0.38Q8.16 0.17 7.55 0.07Q6.95 -0.02 6.33 0Q5.7 0.02 5.11 0.15Q4.51 0.28 3.94 0.53Q3.37 0.78 2.86 1.12Q2.35 1.47 1.91 1.91Q1.47 2.35 1.13 2.85Q0.78 3.36 0.53 3.93Q0.29 4.5 0.15 5.1Q0.02 5.7 0 6.32Q-0.02 6.95 0.07 7.55Q0.17 8.16 0.38 8.74Q0.59 9.33 0.9 9.86Q1.22 10.38 1.63 10.85Q2.04 11.32 2.53 11.69Q3.01 12.07 3.57 12.35Q4.12 12.63 4.71 12.81Q5.3 12.98 5.92 13.03Q6.54 13.09 7.15 13.03Q7.76 12.98 8.36 12.8Q8.96 12.63 9.5 12.35Q9.97 12.11 10.4 11.79L13.67 15.06Q13.74 15.13 13.82 15.19Q13.9 15.24 13.99 15.28Q14.08 15.32 14.18 15.34Q14.27 15.36 14.37 15.36Q14.47 15.36 14.56 15.34Q14.66 15.32 14.75 15.28Q14.84 15.24 14.92 15.19Q15 15.13 15.07 15.06Q15.14 14.99 15.19 14.91Q15.25 14.83 15.29 14.74Q15.32 14.65 15.34 14.56Q15.36 14.46 15.36 14.36Q15.36 14.26 15.34 14.17Q15.32 14.07 15.29 13.98Q15.25 13.89 15.19 13.81Q15.14 13.73 15.07 13.66L11.8 10.39Q12.11 9.96 12.35 9.5Q12.63 8.95 12.8 8.35Q12.98 7.75 13.04 7.14ZM11.53 10.41C12.52 9.14 12.99 7.54 12.84 5.93C12.68 4.33 11.93 2.84 10.72 1.78C9.51 0.71 7.94 0.15 6.33 0.2C4.72 0.25 3.19 0.91 2.05 2.05C0.91 3.19 0.25 4.72 0.2 6.33C0.15 7.94 0.71 9.51 1.78 10.72C2.85 11.93 4.33 12.68 5.94 12.83C7.54 12.99 9.14 12.52 10.42 11.53L10.45 11.56L13.81 14.92C13.88 15 13.97 15.05 14.07 15.09C14.16 15.13 14.27 15.16 14.37 15.16C14.47 15.16 14.58 15.13 14.67 15.09C14.77 15.05 14.86 15 14.93 14.92C15 14.85 15.06 14.76 15.1 14.67C15.14 14.57 15.16 14.47 15.16 14.36C15.16 14.26 15.14 14.16 15.1 14.06C15.06 13.96 15 13.88 14.93 13.8L11.57 10.44C11.56 10.43 11.55 10.42 11.53 10.41ZM9.89 3.17C10.34 3.61 10.69 4.13 10.94 4.71C11.18 5.29 11.31 5.91 11.31 6.53C11.31 7.16 11.19 7.78 10.95 8.36C10.71 8.94 10.36 9.47 9.92 9.91C9.47 10.36 8.95 10.71 8.37 10.95C7.79 11.18 7.17 11.31 6.54 11.3C5.91 11.3 5.29 11.17 4.72 10.93C4.14 10.69 3.61 10.33 3.17 9.88C2.29 8.99 1.8 7.79 1.81 6.53C1.81 5.28 2.31 4.08 3.2 3.19C4.09 2.31 5.29 1.81 6.54 1.8C7.79 1.8 9 2.29 9.89 3.17ZM10.33 4Q10.58 4.37 10.75 4.79Q10.93 5.21 11.02 5.64Q11.11 6.08 11.11 6.54Q11.11 6.99 11.03 7.43Q10.94 7.87 10.77 8.29Q10.59 8.71 10.35 9.08Q10.1 9.45 9.78 9.77Q9.46 10.09 9.08 10.34Q8.71 10.59 8.29 10.76Q7.87 10.93 7.43 11.02Q7 11.11 6.54 11.1Q6.09 11.1 5.65 11.01Q5.21 10.92 4.79 10.75Q4.37 10.57 4 10.32Q3.64 10.07 3.32 9.74Q3 9.42 2.76 9.05Q2.52 8.69 2.35 8.27Q2.18 7.85 2.09 7.42Q2.01 6.99 2.01 6.54Q2.01 6.08 2.1 5.65Q2.19 5.22 2.36 4.8Q2.53 4.39 2.78 4.02Q3.02 3.65 3.34 3.34Q3.66 3.02 4.03 2.77Q4.39 2.53 4.81 2.35Q5.23 2.18 5.66 2.09Q6.09 2.01 6.54 2Q6.99 2 7.42 2.09Q7.86 2.17 8.28 2.34Q8.69 2.51 9.06 2.75Q9.43 2.99 9.75 3.31Q10.07 3.63 10.33 4Z"
-                            fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd" />
+                        <defs>
+                            <path
+                                d="M11.53 10.41C12.52 9.14 12.99 7.54 12.84 5.93C12.68 4.33 11.93 2.84 10.72 1.78C9.51 0.71 7.94 0.15 6.33 0.2C4.72 0.25 3.19 0.91 2.05 2.05C0.91 3.19 0.25 4.72 0.2 6.33C0.15 7.94 0.71 9.51 1.78 10.72C2.85 11.93 4.33 12.68 5.94 12.83C7.54 12.99 9.14 12.52 10.42 11.53L10.45 11.56L13.81 14.92C13.88 15 13.97 15.05 14.07 15.09C14.16 15.13 14.27 15.16 14.37 15.16C14.47 15.16 14.58 15.13 14.67 15.09C14.77 15.05 14.86 15 14.93 14.92C15 14.85 15.06 14.76 15.1 14.67C15.14 14.57 15.16 14.47 15.16 14.36C15.16 14.26 15.14 14.16 15.1 14.06C15.06 13.96 15 13.88 14.93 13.8L11.57 10.44C11.56 10.43 11.55 10.42 11.53 10.41ZM9.89 3.17C10.34 3.61 10.69 4.13 10.94 4.71C11.18 5.29 11.31 5.91 11.31 6.53C11.31 7.16 11.19 7.78 10.95 8.36C10.71 8.94 10.36 9.47 9.92 9.91C9.47 10.36 8.95 10.71 8.37 10.95C7.79 11.18 7.17 11.31 6.54 11.3C5.91 11.3 5.29 11.17 4.72 10.93C4.14 10.69 3.61 10.33 3.17 9.88C2.29 8.99 1.8 7.79 1.81 6.53C1.81 5.28 2.31 4.08 3.2 3.19C4.09 2.31 5.29 1.81 6.54 1.8C7.79 1.8 9 2.29 9.89 3.17Z"
+                                fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd">
+                                <path
+                                    d="M13.04 7.14Q13.09 6.54 13.03 5.92Q12.98 5.3 12.81 4.71Q12.63 4.12 12.35 3.56Q12.07 3.01 11.69 2.53Q11.32 2.04 10.85 1.63Q10.38 1.22 9.86 0.91Q9.33 0.59 8.75 0.38Q8.16 0.17 7.55 0.07Q6.95 -0.02 6.33 0Q5.7 0.02 5.11 0.15Q4.51 0.28 3.94 0.53Q3.37 0.78 2.86 1.12Q2.35 1.47 1.91 1.91Q1.47 2.35 1.13 2.85Q0.78 3.36 0.53 3.93Q0.29 4.5 0.15 5.1Q0.02 5.7 0 6.32Q-0.02 6.95 0.07 7.55Q0.17 8.16 0.38 8.74Q0.59 9.33 0.9 9.86Q1.22 10.38 1.63 10.85Q2.04 11.32 2.53 11.69Q3.01 12.07 3.57 12.35Q4.12 12.63 4.71 12.81Q5.3 12.98 5.92 13.03Q6.54 13.09 7.15 13.03Q7.76 12.98 8.36 12.8Q8.96 12.63 9.5 12.35Q9.97 12.11 10.4 11.79L13.67 15.06Q13.74 15.13 13.82 15.19Q13.9 15.24 13.99 15.28Q14.08 15.32 14.18 15.34Q14.27 15.36 14.37 15.36Q14.47 15.36 14.56 15.34Q14.66 15.32 14.75 15.28Q14.84 15.24 14.92 15.19Q15 15.13 15.07 15.06Q15.14 14.99 15.19 14.91Q15.25 14.83 15.29 14.74Q15.32 14.65 15.34 14.56Q15.36 14.46 15.36 14.36Q15.36 14.26 15.34 14.17Q15.32 14.07 15.29 13.98Q15.25 13.89 15.19 13.81Q15.14 13.73 15.07 13.66L11.8 10.39Q12.11 9.96 12.35 9.5Q12.63 8.95 12.8 8.35Q12.98 7.75 13.04 7.14ZM11.53 10.41C12.52 9.14 12.99 7.54 12.84 5.93C12.68 4.33 11.93 2.84 10.72 1.78C9.51 0.71 7.94 0.15 6.33 0.2C4.72 0.25 3.19 0.91 2.05 2.05C0.91 3.19 0.25 4.72 0.2 6.33C0.15 7.94 0.71 9.51 1.78 10.72C2.85 11.93 4.33 12.68 5.94 12.83C7.54 12.99 9.14 12.52 10.42 11.53L10.45 11.56L13.81 14.92C13.88 15 13.97 15.05 14.07 15.09C14.16 15.13 14.27 15.16 14.37 15.16C14.47 15.16 14.58 15.13 14.67 15.09C14.77 15.05 14.86 15 14.93 14.92C15 14.85 15.06 14.76 15.1 14.67C15.14 14.57 15.16 14.47 15.16 14.36C15.16 14.26 15.14 14.16 15.1 14.06C15.06 13.96 15 13.88 14.93 13.8L11.57 10.44C11.56 10.43 11.55 10.42 11.53 10.41ZM9.89 3.17C10.34 3.61 10.69 4.13 10.94 4.71C11.18 5.29 11.31 5.91 11.31 6.53C11.31 7.16 11.19 7.78 10.95 8.36C10.71 8.94 10.36 9.47 9.92 9.91C9.47 10.36 8.95 10.71 8.37 10.95C7.79 11.18 7.17 11.31 6.54 11.3C5.91 11.3 5.29 11.17 4.72 10.93C4.14 10.69 3.61 10.33 3.17 9.88C2.29 8.99 1.8 7.79 1.81 6.53C1.81 5.28 2.31 4.08 3.2 3.19C4.09 2.31 5.29 1.81 6.54 1.8C7.79 1.8 9 2.29 9.89 3.17ZM10.33 4Q10.58 4.37 10.75 4.79Q10.93 5.21 11.02 5.64Q11.11 6.08 11.11 6.54Q11.11 6.99 11.03 7.43Q10.94 7.87 10.77 8.29Q10.59 8.71 10.35 9.08Q10.1 9.45 9.78 9.77Q9.46 10.09 9.08 10.34Q8.71 10.59 8.29 10.76Q7.87 10.93 7.43 11.02Q7 11.11 6.54 11.1Q6.09 11.1 5.65 11.01Q5.21 10.92 4.79 10.75Q4.37 10.57 4 10.32Q3.64 10.07 3.32 9.74Q3 9.42 2.76 9.05Q2.52 8.69 2.35 8.27Q2.18 7.85 2.09 7.42Q2.01 6.99 2.01 6.54Q2.01 6.08 2.1 5.65Q2.19 5.22 2.36 4.8Q2.53 4.39 2.78 4.02Q3.02 3.65 3.34 3.34Q3.66 3.02 4.03 2.77Q4.39 2.53 4.81 2.35Q5.23 2.18 5.66 2.09Q6.09 2.01 6.54 2Q6.99 2 7.42 2.09Q7.86 2.17 8.28 2.34Q8.69 2.51 9.06 2.75Q9.43 2.99 9.75 3.31Q10.07 3.63 10.33 4Z"
+                                    fill="#FFFFFF" fill-opacity="1.000000" fill-rule="evenodd">
                     </svg>
                 </a>
                 <a href="catalog.html"><svg width="19.199463" height="19.199951" viewBox="0 0 19.1995 19.2" fill="none"
@@ -43,25 +43,24 @@
                         <desc>
                             Created with Pixso.
                         </desc>
-                        <defs />
-                        <rect id="Rectangle 46" width="4.571429" height="4.571429" fill="#FFFFFF"
-                            fill-opacity="1.000000" />
-                        <rect id="Rectangle 41" y="7.314209" width="4.571429" height="4.571429" fill="#FFFFFF"
-                            fill-opacity="1.000000" />
-                        <rect id="Rectangle 47" y="14.628540" width="4.571429" height="4.571428" fill="#FFFFFF"
-                            fill-opacity="1.000000" />
-                        <rect id="Rectangle 48" x="7.313477" y="7.314209" width="4.571429" height="4.571429"
-                            fill="#FFFFFF" fill-opacity="1.000000" />
-                        <rect id="Rectangle 45" x="7.313477" y="14.628540" width="4.571429" height="4.571428"
-                            fill="#FFFFFF" fill-opacity="1.000000" />
-                        <rect id="Rectangle 49" x="7.313477" width="4.571429" height="4.571429" fill="#FFFFFF"
-                            fill-opacity="1.000000" />
-                        <rect id="Rectangle 42" x="14.627930" y="7.314209" width="4.571428" height="4.571429"
-                            fill="#FFFFFF" fill-opacity="1.000000" />
-                        <rect id="Rectangle 44" x="14.627930" y="14.628540" width="4.571428" height="4.571428"
-                            fill="#FFFFFF" fill-opacity="1.000000" />
-                        <rect id="Rectangle 43" x="14.627930" width="4.571428" height="4.571429" fill="#FFFFFF"
-                            fill-opacity="1.000000" />
+                        <defs>
+                            <rect width="4.571429" height="4.571429" fill="#FFFFFF" fill-opacity="1.000000">
+                                <rect y="7.314209" width="4.571429" height="4.571429" fill="#FFFFFF"
+                                    fill-opacity="1.000000">
+                                    <rect y="14.628540" width="4.571429" height="4.571428" fill="#FFFFFF"
+                                        fill-opacity="1.000000">
+                                        <rect x="7.313477" y="7.314209" width="4.571429" height="4.571429"
+                                            fill="#FFFFFF" fill-opacity="1.000000">
+                                            <rect x="7.313477" y="14.628540" width="4.571429" height="4.571428"
+                                                fill="#FFFFFF" fill-opacity="1.000000">
+                                                <rect x="7.313477" width="4.571429" height="4.571429" fill="#FFFFFF"
+                                                    fill-opacity="1.000000">
+                                                    <rect x="14.627930" y="7.314209" width="4.571428" height="4.571429"
+                                                        fill="#FFFFFF" fill-opacity="1.000000">
+                                                        <rect x="14.627930" y="14.628540" width="4.571428"
+                                                            height="4.571428" fill="#FFFFFF" fill-opacity="1.000000">
+                                                            <rect x="14.627930" width="4.571428" height="4.571429"
+                                                                fill="#FFFFFF" fill-opacity="1.000000">
                     </svg>
                 </a>
                 <a href="cart.html"><svg width="18.717285" height="16.666626" viewBox="0 0 18.7173 16.6666" fill="none"
@@ -69,10 +68,10 @@
                         <desc>
                             Created with Pixso.
                         </desc>
-                        <defs />
-                        <path id="Vector"
-                            d="M11.45 16.66C12.01 16.66 12.54 16.44 12.93 16.05C13.32 15.66 13.54 15.13 13.54 14.58C13.54 14.03 13.32 13.5 12.93 13.11C12.54 12.71 12.01 12.5 11.45 12.5C10.9 12.5 10.37 12.71 9.98 13.11C9.59 13.5 9.37 14.03 9.37 14.58C9.37 15.13 9.59 15.66 9.98 16.05C10.37 16.44 10.9 16.66 11.45 16.66ZM4.16 16.66C4.71 16.66 5.24 16.44 5.63 16.05C6.03 15.66 6.24 15.13 6.24 14.58C6.24 14.03 6.03 13.5 5.63 13.11C5.24 12.71 4.71 12.5 4.16 12.5C3.61 12.5 3.08 12.71 2.69 13.11C2.3 13.5 2.08 14.03 2.08 14.58C2.08 15.13 2.3 15.66 2.69 16.05C3.08 16.44 3.61 16.66 4.16 16.66ZM17.74 2C18 1.99 18.25 1.88 18.43 1.69C18.61 1.51 18.71 1.26 18.71 1C18.71 0.74 18.61 0.49 18.43 0.3C18.25 0.11 18 0 17.74 0L16.54 0C15.6 0 14.79 0.65 14.59 1.56L13.28 7.44C13.08 8.36 12.27 9.01 11.33 9.01L3.5 9.01L2 3L11.73 3C11.99 2.99 12.23 2.88 12.41 2.69C12.59 2.5 12.69 2.26 12.69 2C12.69 1.74 12.59 1.49 12.41 1.31C12.23 1.12 11.99 1.01 11.73 1L2 1C1.69 1 1.39 1.07 1.12 1.2C0.85 1.33 0.61 1.53 0.42 1.77C0.23 2.01 0.1 2.29 0.04 2.58C-0.02 2.88 -0.02 3.19 0.06 3.49L1.56 9.5C1.67 9.93 1.92 10.31 2.27 10.59C2.62 10.86 3.05 11.01 3.5 11.01L11.33 11.01C12.24 11.01 13.12 10.7 13.83 10.13C14.54 9.56 15.04 8.77 15.24 7.88L16.54 2L17.74 2Z"
-                            fill="#FFFFFF" fill-opacity="1.000000" fill-rule="nonzero" />
+                        <defs>
+                            <path
+                                d="M11.45 16.66C12.01 16.66 12.54 16.44 12.93 16.05C13.32 15.66 13.54 15.13 13.54 14.58C13.54 14.03 13.32 13.5 12.93 13.11C12.54 12.71 12.01 12.5 11.45 12.5C10.9 12.5 10.37 12.71 9.98 13.11C9.59 13.5 9.37 14.03 9.37 14.58C9.37 15.13 9.59 15.66 9.98 16.05C10.37 16.44 10.9 16.66 11.45 16.66ZM4.16 16.66C4.71 16.66 5.24 16.44 5.63 16.05C6.03 15.66 6.24 15.13 6.24 14.58C6.24 14.03 6.03 13.5 5.63 13.11C5.24 12.71 4.71 12.5 4.16 12.5C3.61 12.5 3.08 12.71 2.69 13.11C2.3 13.5 2.08 14.03 2.08 14.58C2.08 15.13 2.3 15.66 2.69 16.05C3.08 16.44 3.61 16.66 4.16 16.66ZM17.74 2C18 1.99 18.25 1.88 18.43 1.69C18.61 1.51 18.71 1.26 18.71 1C18.71 0.74 18.61 0.49 18.43 0.3C18.25 0.11 18 0 17.74 0L16.54 0C15.6 0 14.79 0.65 14.59 1.56L13.28 7.44C13.08 8.36 12.27 9.01 11.33 9.01L3.5 9.01L2 3L11.73 3C11.99 2.99 12.23 2.88 12.41 2.69C12.59 2.5 12.69 2.26 12.69 2C12.69 1.74 12.59 1.49 12.41 1.31C12.23 1.12 11.99 1.01 11.73 1L2 1C1.69 1 1.39 1.07 1.12 1.2C0.85 1.33 0.61 1.53 0.42 1.77C0.23 2.01 0.1 2.29 0.04 2.58C-0.02 2.88 -0.02 3.19 0.06 3.49L1.56 9.5C1.67 9.93 1.92 10.31 2.27 10.59C2.62 10.86 3.05 11.01 3.5 11.01L11.33 11.01C12.24 11.01 13.12 10.7 13.83 10.13C14.54 9.56 15.04 8.77 15.24 7.88L16.54 2L17.74 2Z"
+                                fill="#FFFFFF" fill-opacity="1.000000" fill-rule="nonzero">
                     </svg>
                 </a>
             </nav>
@@ -196,22 +195,22 @@
                 <a class="suport footer__list" href="maito:help@interier.com">help@interier.com</a>
                 <div class="social">
                     <a class="dzen" href="#"><svg width="19.000000" height="18.000000" viewBox="0 0 19 18" fill="none">
-                            <path id="Vector"
+                            <path
                                 d="M11.33 10.73C9.83 12.19 9.73 14.01 9.6 18C13.52 18 16.23 17.98 17.62 16.7C18.98 15.37 19 12.69 19 9.09C14.79 9.22 12.87 9.32 11.33 10.73ZM0 9.09C0 12.69 0.01 15.37 1.37 16.7C2.76 17.98 5.47 18 9.39 18C9.26 14.01 9.16 12.19 7.66 10.73C6.12 9.32 4.2 9.21 0 9.09ZM9.39 0C5.48 0 2.76 0.01 1.37 1.29C0.01 2.62 0 5.31 0 8.9C4.2 8.77 6.12 8.67 7.66 7.26C9.16 5.8 9.26 3.98 9.39 0ZM11.33 7.26C9.83 5.8 9.73 3.98 9.6 0C13.52 0 16.23 0.01 17.62 1.29C18.98 2.62 19 5.31 19 8.9C14.79 8.77 12.87 8.67 11.33 7.26Z"
-                                fill="#888888" fill-opacity="1.000000" fill-rule="nonzero" />
+                                fill="#888888" fill-opacity="1.000000" fill-rule="nonzero">
                         </svg>
                     </a>
                     <a class="telegram" href="#"><svg width="21.000000" height="17.675720" viewBox="0 0 21 17.6757">
-                            <path id="Vector"
+                            <path
                                 d="M19.29 0.2L0.68 7.41C-0.06 7.74 -0.32 8.42 0.5 8.78L5.28 10.31L16.82 3.14C17.45 2.69 18.09 2.81 17.54 3.3L7.63 12.32L7.31 16.14C7.6 16.73 8.13 16.73 8.47 16.44L11.21 13.83L15.91 17.37C17 18.02 17.59 17.6 17.83 16.41L20.91 1.74C21.23 0.28 20.68 -0.37 19.29 0.2Z"
-                                fill="#888888" fill-opacity="1.000000" fill-rule="nonzero" />
+                                fill="#888888" fill-opacity="1.000000" fill-rule="nonzero">
                         </svg>
                     </a>
                     <a class="vk" href="#"><svg width="24.000488" height="14.000000" viewBox="0 0 24.0005 14"
                             fill="none">
-                            <path id="Vector"
+                            <path
                                 d="M23.45 0.94C23.61 0.4 23.45 0 22.65 0L20.02 0C19.36 0 19.05 0.34 18.88 0.72C18.88 0.72 17.55 3.92 15.66 6C15.04 6.6 14.77 6.79 14.43 6.79C14.27 6.79 14.01 6.6 14.01 6.05L14.01 0.94C14.01 0.29 13.83 0 13.27 0L9.15 0C8.73 0 8.48 0.3 8.48 0.59C8.48 1.21 9.42 1.35 9.52 3.1L9.52 6.9C9.52 7.73 9.37 7.88 9.03 7.88C8.14 7.88 5.98 4.67 4.69 1C4.45 0.28 4.19 0 3.52 0L0.89 0C0.14 0 0 0.34 0 0.72C0 1.41 0.89 4.79 4.14 9.28C6.31 12.34 9.37 14 12.15 14C13.82 14 14.02 13.63 14.02 12.99L14.02 10.68C14.02 9.94 14.18 9.79 14.71 9.79C15.1 9.79 15.77 9.99 17.33 11.46C19.1 13.21 19.4 14 20.4 14L23.02 14C23.77 14 24.15 13.63 23.93 12.9C23.7 12.18 22.85 11.12 21.72 9.88C21.11 9.17 20.19 8.4 19.91 8.02C19.52 7.53 19.63 7.31 19.91 6.87C19.91 6.87 23.11 2.45 23.44 0.94L23.45 0.94Z"
-                                fill="#888888" fill-opacity="1.000000" fill-rule="evenodd" />
+                                fill="#888888" fill-opacity="1.000000" fill-rule="evenodd">
                         </svg>
                     </a>
                 </div>
