корректировка cart.html

--- a/cart.html
+++ b/cart.html
@@ -45,21 +45,21 @@
                         </desc>
                         <defs>
                             <rect width="4.571429" height="4.571429" fill="#FFFFFF" fill-opacity="1.000000">
-                                <rect 1" y="7.314209" width="4.571429" height="4.571429" fill="#FFFFFF"
+                                <rect y="7.314209" width="4.571429" height="4.571429" fill="#FFFFFF"
                                     fill-opacity="1.000000">
-                                    <rect 7" y="14.628540" width="4.571429" height="4.571428" fill="#FFFFFF"
+                                    <rect y="14.628540" width="4.571429" height="4.571428" fill="#FFFFFF"
                                         fill-opacity="1.000000">
-                                        <rect 8" x="7.313477" y="7.314209" width="4.571429" height="4.571429"
+                                        <rect x="7.313477" y="7.314209" width="4.571429" height="4.571429"
                                             fill="#FFFFFF" fill-opacity="1.000000">
-                                            <rect 5" x="7.313477" y="14.628540" width="4.571429" height="4.571428"
+                                            <rect x="7.313477" y="14.628540" width="4.571429" height="4.571428"
                                                 fill="#FFFFFF" fill-opacity="1.000000">
-                                                <rect 9" x="7.313477" width="4.571429" height="4.571429" fill="#FFFFFF"
+                                                <rect x="7.313477" width=571429" height="4.571429" fill="#FFFFFF"
                                                     fill-opacity="1.000000">
-                                                    <rect 2" x="14.627930" y="7.314209" width="4.571428"
+                                                    <rect x="14.627930" y="7.314209" width="4.571428"
                                                         height="4.571429" fill="#FFFFFF" fill-opacity="1.000000">
-                                                        <rect 4" x="14.627930" y="14.628540" width="4.571428"
+                                                        <rect x="14.627930" y="14.628540" width="4.571428"
                                                             height="4.571428" fill="#FFFFFF" fill-opacity="1.000000">
-                                                            <rect 3" x="14.627930" width="4.571428" height="4.571429"
+                                                            <rect x="14.627930" width="4.571428" height="4.571429"
                                                                 fill="#FFFFFF" fill-opacity="1.000000">
                     </svg>
                 </a>
